# ScribeStarter

./: blog_post.md  new-logs.txt  pyproject.toml  readme.md
src/ScribeStarter/: main.py
