[tool.poetry]
name = "ScribeStarter"
version = "0.1.0"
description = "BlogAgentBoiler using crewAI"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "ScribeStarter", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
nltk = "^3.9.1"
firecrawl = "^0.0.20"
pyyaml = "^6.0"

[tool.poetry.scripts]
ScribeStarter = "ScribeStarter.main:run"
run_crew = "ScribeStarter.main:run"
train = "ScribeStarter.main:train"
replay = "ScribeStarter.main:replay"
test = "ScribeStarter.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
